# cryfs

./: .clang-tidy  .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.fspp.txt  CMakeLists.txt  CMakeLists.txt~  CMakeSettings.json  CachingBaseStore.h  CachingStore.h  Cargo.toml  ChangeLog.txt  CryConfig.cpp  CryConfig.h  CryDevice.cpp  CryDevice.h  CryDir.cpp  CryDir.h  CryFile.cpp  CryFile.h  CryNode.cpp  CryNode.h  CryOpenFile.cpp  CryOpenFile.h  LICENSE  ParallelAccessBaseStore.h  ParallelAccessStore.h  README  README.md  TODO  TODO-0.10.txt  TargetArch.cmake  appveyor.yml  archive.sh  azure-pipelines.yml  biicode.conf  conanfile.py  cryfs-conf-build.sh  cryfs-conf.sh  (+13 more)
blockstore/: Cargo.toml
blockstore/src/: lib.rs  utils.rs
blockstore/src/low_level/: interface.rs
blockstore/src/tests/: mod.rs
crates/blobstore/: Cargo.toml
crates/blobstore/src/: blob_id.rs  interface.rs  lib.rs  shared_blob_store.rs
crates/blockstore/: Cargo.toml
crates/blockstore/src/: block_id.rs  lib.rs  overhead.rs  utils.rs
crates/check/: Cargo.toml
crates/check/src/: args.rs  assertion.rs  cli.rs  console.rs  error.rs  lib.rs  runner.rs  task_queue.rs
crates/check/tests/: blob_missing.rs  blob_referenced_multiple_times.rs  blob_unreadable.rs  blob_unreferenced.rs  blob_with_wrong_parent_pointer.rs  missing_node.rs  node_missing.rs  node_referenced_multiple_times.rs  node_unreadable.rs  node_unreferenced.rs  unreadable_blob.rs  unreadable_node.rs  valid.rs
crates/cli-utils/: Cargo.toml
crates/cli-utils/src/: application.rs  args.rs  blockstore_setup.rs  config.rs  env.rs  error.rs  lib.rs  password_provider.rs  path.rs  version.rs
crates/cli-utils/testbins/: .gitignore
crates/cli-utils/tests/: arguments.rs  empty.rs  flag.rs  (+2 more)
crates/concurrent-store/: Cargo.toml
crates/cryfs/: Cargo.toml
crates/cryfs-cli/: Cargo.toml
crates/cryfs-config/: Cargo.toml
crates/cryfs-filesystem/: Cargo.toml
crates/cryfs-runner/: Cargo.toml
crates/cryfs-version/: Cargo.toml
crates/crypto/: Cargo.toml
crates/e2e-perf-tests/: Cargo.toml
crates/fsblobstore/: Cargo.toml
crates/recover/: Cargo.toml
crates/rustfs/: Cargo.toml
crates/tempproject/: Cargo.toml
crates/utils/: Cargo.toml
cryfs-cli/: Cargo.toml
cryfs-cli/src/: args.rs  cli.rs
cryfs-version/: Cargo.toml
cryfs-version/src/: lib.rs  version.rs  version_info.rs
cryfs-version/tests/: cryfs-version.rs
doc/: CMakeLists.txt
doc/man/: cryfs-unmount.1  cryfs.1
old-cpp/src/: CMakeLists.txt
rustfs/: Cargo.toml
rustfs/src/: lib.rs
src/: CMakeLists.txt  Cli.cpp  Cli.h  CryCipher.cpp  CryCipher.h  CryConfig.cpp  CryConfig.h  CryConfigLoader.cpp  CryConfigLoader.h  CryDevice.cpp  CryDevice.h  CryDir.cpp  CryDir.h  CryFile.cpp  CryFile.h  CryFuse.cpp  CryFuse.h  CryNode.cpp  CryNode.h  CryOpenFile.cpp  CryOpenFile.h  CrySymlink.cpp  CrySymlink.h  macros.h  main.cpp
src/assert/: AssertFailed.cpp
src/blobstore/: CMakeLists.txt
src/blockstore/: CMakeLists.txt
src/cli/: CallAfterTimeout.h  Cli.cpp  Cli.h  HttpClient.cpp  HttpClient.h  VersionChecker.cpp  VersionChecker.h
src/config/: CryCipher.cpp  CryCipher.h  CryConfig.cpp  CryConfig.h  CryConfigConsole.cpp  CryConfigConsole.h  CryConfigCreator.cpp  CryConfigCreator.h  CryConfigEncryptor.cpp  CryConfigEncryptor.h  CryConfigFile.cpp  CryConfigFile.h  CryConfigLoader.cpp  CryConfigLoader.h  RandomPadding.cpp  RandomPadding.h
src/cpp-utils/: CMakeLists.txt  either.h  macros.h
src/cryfs/: CMakeLists.txt  CryfsException.h  ErrorCodes.h  cryfs.cpp  cryfs.h  cryfspp.h  main.cpp
src/cryfs-cli/: CMakeLists.txt  CallAfterTimeout.h  Cli.cpp  Cli.h  Environment.cpp  Environment.h  VersionChecker.cpp  VersionChecker.h  VersionCompare.cpp  VersionCompare.h  main.cpp
src/cryfs-unmount/: CMakeLists.txt  Cli.cpp  Cli.h  main_unmount.cpp
src/cryfs_lib/: CMakeLists.txt  CryConfig.cpp  CryConfig.h  CryDevice.cpp  CryDevice.h  CryDir.cpp  CryDir.h  CryErrnoException.cpp  CryErrnoException.h  CryFile.cpp  CryFile.h  CryFuse.cpp  CryFuse.h  CryNode.cpp  CryNode.h  CryOpenDir.cpp  CryOpenDir.h  CryOpenDirList.cpp  CryOpenDirList.h  CryOpenFile.cpp  CryOpenFile.h  CryOpenFileList.cpp  CryOpenFileList.h  IdList.cpp  IdList.h
src/data/: DataFixture.cpp  Deserializer.cpp
src/filesystem/: CryDevice.cpp  CryDevice.h  CryDir.cpp  CryDir.h  CryFile.cpp  CryFile.h  CryNode.cpp  CryNode.h  CryOpenFile.cpp  CryOpenFile.h  CrySymlink.cpp  CrySymlink.h
src/fspp/: CMakeLists.txt
src/fusepp/: CMakeLists.txt  Fuse.cpp  Fuse.h  FuseDevice.cpp  FuseDevice.h  FuseDir.cpp  FuseDir.h  FuseErrnoException.cpp  FuseFile.cpp  FuseFile.h  FuseNode.cpp  FuseNode.h  FuseOpenFile.cpp  FuseOpenFile.h  FuseOpenFileList.cpp  FuseOpenFileList.h  IdList.cpp  IdList.h  params.h
src/gitversion/: CMakeLists.txt  MANIFEST.in  VersionCompare.cpp  VersionCompare.h  _version.py  getversion.py  gitversion.cmake  gitversion.cpp  gitversion.h  parser.cpp  parser.h  setup.cfg  setup.py  versioneer.py  versionstring.cpp  versionstring.h
src/impl/: DirBlob.cpp  DirBlob.h  FileBlob.cpp  FileBlob.h  MagicNumbers.h  SymlinkBlob.cpp  SymlinkBlob.h
src/io/: Console.h
src/logging/: Logger.h
src/parallelaccessstore/: CMakeLists.txt  ParallelAccessBaseStore.cpp  ParallelAccessBaseStore.h  ParallelAccessStore.cpp  ParallelAccessStore.h
src/process/: subprocess.h
src/program_options/: Parser.cpp  Parser.h  ProgramOptions.cpp  ProgramOptions.h  utils.cpp  utils.h
src/random/: OSRandomGenerator.cpp  OSRandomGenerator.h  Random.cpp  RandomDataBuffer.cpp
src/stats/: CMakeLists.txt  main.cpp  traversal.cpp  traversal.h
src/tempfile/: TempDir.cpp  TempFile.h
src/test/: MyTest.cpp
src/utils/: Console.cpp  Console.h
src/version/: Version.h  VersionHandler.h  VersionParser.h
utils/: BlockStoreUtils.cpp  BlockStoreUtils.h  Cargo.toml  Data.cpp  Data.h  FileDoesntExistException.cpp  FileDoesntExistException.h  FixedSizeData.h  IOException.cpp  IOException.h  Key.cpp  Key.h  assert.h
utils/benches/: crypto_symmetric.rs  path.rs
utils/src/: binary.rs  lib.rs  path.rs  stream.rs
(+3149 files in other folders)
