[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2021"
rust-version = "1.77"
homepage = "https://www.cryfs.org"
repository = "https://github.com/cryfs/cryfs"
license = "LGPL-3.0-or-later"
readme = "README.md"
version = "2.0.0-alpha1"
# TODO Set categories, keywords, documentation, description (and then make sure to link the crates/*/Cargo.toml to it)
# TODO look at whether we want to add [badges], see https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section

[workspace.dependencies]
# TODO Go through the dependencies and check if there are any default-features we don't need and can disable
aead = "^0.5.2"
aes-gcm = "^0.10.3"
anyhow = "^1.0.81"
assert_cmd = "^2.0.14"
async-trait = "^0.1.78"
base64 = "^0.22.0"
binary-layout = "^4.0.1"
binrw = "^0.13.3"
chacha20poly1305 = "^0.10.1"
clap = "^4.5.3"
common_macros = "^0.1.1"
conv = "^0.3.3"
console = "^0.15.8"
criterion = "^0.5.1"
derivative = "^2.2.0"
derive_more = "^0.99.17"
dialoguer = "^0.11.0"
dirs = "^5.0.1"
divrem = "^1.0.0"
env_logger = "^0.11.3"
envtestkit = "^1.1.2"
errno = "^0.3.8"
escargot = "^0.5.10"
fuse_mt = "^0.6.1"
fuse_mt_fuser = {package = "fuser", version = "^0.13.0"}
fuser = "^0.14.0"
futures = "^0.3.30"
generic-array = "^1.0.0"
generic-tests = "^0.1.2"
git2version = "^0.4.0"
hex = "^0.4.3"
indicatif = "^0.17.8"
indoc = "^2.0.4"
is_executable = "^1.0.1"
iter-chunks = "^0.2.2"
itertools = "^0.12.1"
konst = "^0.3.8"
lazy_static = "^1.4.0"
libc = "^0.2.153"
lockable = "^0.0.8"
log = "^0.4.21"
lzzzz = "^1.0.5"
maybe-owned = "^0.3.4"
mockall = "^0.12.1"
nix = "^0.28.0"
openssl = "^0.10.64"
path-absolutize = " ^3.1.1"
pathdiff = "^0.2.1"
predicates = "^3.1.0"
rand = "^0.8.5"
rayon = "^1.9.0"
region = "^3.0.0"
rpassword = "^7.3.1"
rstest = "^0.18.2"
rstest_reuse = "^0.6.0"
scrypt = {version = "^0.11.0", default-features = false}
serde = "^1.0.197"
serde_json = "^1.0.114"
serde_with = {version = "^3.7.0", features=["hex"]}
signal-hook = "^0.3.17"
sodiumoxide = "^0.2.7"
static_assertions = "^1.1.0"
sysinfo = "^0.30.7"
tempdir = "^0.3.7"
thiserror = "^1.0.58"
tokio = "^1.36.0"
tokio-stream = "^0.1.15"
tokio-util = "^0.7.10"
users = "^0.11.0"
winapi = "^0.3.9"

[profile.release]
lto = "fat"
