[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2024"
rust-version = "1.89"
homepage = "https://www.cryfs.org"
repository = "https://github.com/cryfs/cryfs"
license = "LGPL-3.0-or-later"
readme = "README.md"
version = "2.0.0-alpha1"
# TODO Set categories, keywords, documentation, description (and then make sure to link the crates/*/Cargo.toml to it)
# TODO look at whether we want to add [badges], see https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section

[workspace.dependencies]
# TODO Go through the dependencies and check if there are any default-features we don't need and can disable
aead = "^0.5.2"
aes-gcm = "^0.10.3"
anyhow = "^1.0.98"
assert_cmd = "^2.0.17"
async-trait = "^0.1.88"
atomic-time = "^0.1.5"
base64 = "^0.22.1"
binary-layout = "^4.0.2"
binrw = "^0.15"
byte-unit = "^5.1.6"
chacha20poly1305 = "^0.10.1"
clap = "^4.5.37"
clap-logflag = "^0.2.1"
color-print = "^0.3.7"
common_macros = "^0.1.1"
conv = "^0.3.3"
console = "^0.16"
console-subscriber = "^0.4.1"
crabtime = "^1.1.3"
criterion = "^0.7.0"
daemonize = "^0.5.0"
derivative = "^2.2.0"
derive_more = { version = "^2.0.1", features = ["full"] }
dialoguer = "^0.12.0"
dirs = "^6.0.0"
divrem = "^1.0.0"
env_logger = "^0.11.8"
envtestkit = "^1.1.2"
errno = "^0.3.11"
escargot = "^0.5.14"
fuse_mt = "^0.6.1"
fuser = "^0.16"
futures = "^0.3.31"
generic-array = "^1.3"
generic-tests = "^0.1.3"
git2version = "^0.4.0"
hex = "^0.4.3"
humantime = "^2.2.0"
human-panic = "^2.0.2"
indicatif = "^0.18"
indoc = "^2.0.6"
is_executable = "^1.0.4"
interprocess = "^2.2.3"
iter-chunks = "^0.2.2"
itertools = "^0.14.0"
konst = "^0.4"
lazy_static = "^1.5.0"
libc = "^0.2.172"
lockable = "^0.2.0"
log = "^0.4.27"
lzzzz = "^2.0.0"
maybe-owned = "^0.3.4"
mockall = "^0.13.1"
nix = "^0.30"
once_cell = "^1.21.3"
openssl = "^0.10.72"
path-absolutize = " ^3.1.1"
pathdiff = "^0.2.3"
pretty_assertions = "^1.4.1"
bincode = "^2.0.1"
predicates = "^3.1.3"
rand = "^0.9.1"
rayon = "^1.10.0"
region = "^3.0.2"
reqwest = "^0.12.15"
rpassword = "^7.3.1"
rstest = "^0.26"
rstest_reuse = "^0.7.0"
# TODO Go back to public scrypt version once https://github.com/RustCrypto/password-hashes/pull/733 is merged
scrypt = { git = "https://github.com/smessmer/password-hashes", rev = "a28947d142b48a3f5a54395428c5690f954594d3", default-features = false }
serde = "^1.0.219"
serde_json = "^1.0.140"
serde_with = { version = "^3.12.0", features = ["hex"] }
signal-hook = "^0.3.17"
sodiumoxide = "^0.2.7"
static_assertions = "^1.1.0"
sysinfo = "^0.37"
tempdir = "^0.3.7"
thiserror = "^2.0.12"
tokio = "^1.44.2"
tokio-stream = "^0.1.17"
tokio-util = "^0.7.14"
users = "^0.11.0"
winapi = "^0.3.9"

[profile.release]
lto = "fat"
