[package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2021"
name = "cryfs-blockstore"
version = "0.11.0"

[dependencies]
anyhow = "^1.0.71"
async-trait = "^0.1.68"
base64 = "^0.21.2"
binary-layout = "^3.1.3"
binrw = "^0.11.2"
cryfs-utils = {path = "../utils"}
cryfs-version = {path = "../cryfs-version"}
errno = "^0.3.1"
futures = "^0.3.28"
hex = "^0.4.3"
lockable = "^0.0.6"
log = "^0.4.19"
lzzzz = "^1.0.4"
mockall = {version = "^0.11.4", optional = true}
derive_more = {version = "^0.99.17", optional = true}
rand = "^0.8.5"
sysinfo = "^0.29.2"
thiserror = "^1.0.40"
tokio = {version = "^1.28.2", features = ["fs"]}
tokio-stream = {version = "^0.1.14", features = ["fs"]}

[target.'cfg(not(any(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
libc = "^0.2.146"

[target.'cfg(windows)'.dependencies]
winapi = {version = "^0.3.9", features = ["fileapi"]}

[dev-dependencies]
common_macros = "^0.1.1"
derive_more = "^0.99.17"
cryfs-utils = {path = "../utils", features = ["testutils"]}
generic-array = "^0.14.7"
mockall = "^0.11.4"
tempdir = "^0.3.7"

[features]
testutils = ["mockall", "derive_more", "cryfs-utils/testutils"]
