[package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2021"
name = "cryfs-cli"
version = "0.11.0"

[[bin]]
name = "cryfs"

[dependencies]
async-trait = "^0.1.68"
cryfs-cryfs = {path = "../cryfs"}
cryfs-utils = {path = "../utils"}
cryfs-rustfs = {path = "../rustfs", features = ["fuse_mt"]}
cryfs-version = {path = "../cryfs-version"}
cryfs-blobstore = {path = "../blobstore"}
cryfs-blockstore = {path = "../blockstore"}
clap = {version = "^4.3.4", features = ["derive"]}
tokio = {version = "^1.28.2", features = ["rt-multi-thread", "macros"]}
anyhow = "^1.0.71"
dirs = "^5.0.1"
env_logger = "^0.10.0"
path-absolutize = "^3.1.0"
rpassword = "^7.2"
dialoguer = "^0.10.4"

[dev-dependencies]
envtestkit = "^1.1.2"
tempdir = "^0.3.7"
pathdiff = "^0.2.1"
assert_cmd = "^2.0.11"
predicates = "^3.0.3"
escargot = "^0.5.7"
lazy_static = "^1.4.0"

[features]
default = ["check_for_updates"]
check_for_updates = []
