[package]
name = "cryfs-blobstore"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
binary-layout.workspace = true
binrw.workspace = true
conv.workspace = true
log.workspace = true
cryfs-blockstore = { path = "../blockstore" }
cryfs-utils = { path = "../utils" }
cryfs-version = { path = "../cryfs-version" }
divrem.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
cryfs-blockstore = { path = "../blockstore", features = ["testutils"] }
cryfs-utils = { path = "../utils", features = ["testutils"] }
iter-chunks.workspace = true
rand = { workspace = true, features = ["small_rng"] }
rstest.workspace = true
rstest_reuse.workspace = true
tokio = { workspace = true, features = ["macros"] }

[features]
# Enable tests that are very slow to build or run
# TODO We need a better way of doing this, see https://github.com/la10736/rstest/issues/184
slow-tests-any = []
slow-tests-1 = ["slow-tests-any"]
slow-tests-2 = ["slow-tests-any"]
slow-tests-3 = ["slow-tests-any"]
slow-tests-4 = ["slow-tests-any"]
slow-tests-5 = ["slow-tests-any"]
slow-tests-6 = ["slow-tests-any"]
testutils = ["cryfs-blockstore/testutils"]
