[package]
name = "cryfs-check"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "cryfs-check"

[dependencies]
# TODO cryfs-check indirectly depends on cryfs-rustfs. This shouldn't be necessary.
anyhow.workspace = true
async-trait.workspace = true
byte-unit.workspace = true
clap = { workspace = true, features = ["derive"] }
clap-logflag.workspace = true
cryfs-blockstore = { path = "../blockstore" }
cryfs-blobstore = { path = "../blobstore" }
cryfs-cli-utils = { path = "../cli-utils" }
cryfs-crypto = { path = "../crypto" }
cryfs-filesystem = { path = "../cryfs-filesystem" }  # TODO Remove filesystem dependency
cryfs-config = { path = "../cryfs-config" } 
cryfs-fsblobstore = { path = "../fsblobstore" }
cryfs-utils = { path = "../utils" }
cryfs-version = { path = "../cryfs-version" }
derivative.workspace = true
log.workspace = true
futures.workspace = true
thiserror.workspace = true
console.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
itertools.workspace = true

[dev-dependencies]
tempdir.workspace = true
cryfs-filesystem = { path = "../cryfs-filesystem", features = ["testutils"] }
cryfs-fsblobstore = { path = "../fsblobstore", features = ["testutils"] }
cryfs-blockstore = { path = "../blockstore", features = ["testutils"] }
cryfs-config = { path = "../cryfs-config", features = ["testutils"] }
itertools.workspace = true
rand.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
pretty_assertions.workspace = true

[features]
default = ["check_for_updates"]
check_for_updates = ["cryfs-cli-utils/check_for_updates"]
