[package]
name = "cryfs-cli-utils"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = {workspace = true, features = ["derive"]}
cryfs-cryfs = {path = "../cryfs"}
cryfs-version = {path = "../cryfs-version"}
dirs.workspace = true
env_logger.workspace = true
path-absolutize.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}

[dev-dependencies]
assert_cmd.workspace = true
envtestkit.workspace = true
indoc.workspace = true
lazy_static.workspace = true
pathdiff.workspace = true
predicates.workspace = true
rstest.workspace = true
tempdir.workspace = true
tempproject = {path = "../tempproject"}

[features]
default = ["check_for_updates"]
check_for_updates = []
