[package]
name = "cryfs-cli-utils"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byte-unit.workspace = true
clap = { workspace = true, features = ["derive"] }
clap-logflag.workspace = true
console.workspace = true
cryfs-filesystem = { path = "../cryfs-filesystem" }
cryfs-blockstore = { path = "../blockstore" }
cryfs-version = { path = "../cryfs-version" }
cryfs-utils = { path = "../utils" }
derive_more.workspace = true
dirs.workspace = true
human-panic.workspace = true
log.workspace = true
path-absolutize.workspace = true
rpassword.workspace = true
reqwest = { workspace = true, optional = true, features = ["blocking", "json"] }
serde.workspace = true
serde_json = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd.workspace = true
envtestkit.workspace = true
indoc.workspace = true
lazy_static.workspace = true
pathdiff.workspace = true
predicates.workspace = true
rstest.workspace = true
tempdir.workspace = true
konst.workspace = true
tempproject = { path = "../tempproject" }

[features]
default = ["check_for_updates"]
check_for_updates = ["dep:reqwest", "dep:serde_json"]
