[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "cryfs-concurrent-store"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
lockable.workspace = true
cryfs-utils = { path = "../utils" }
cryfs-version = { path = "../cryfs-version" }
tokio.workspace = true
log.workspace = true

[dev-dependencies]
# TODO Should we remove `slow_assertions` here to speed up cryfs in debug builds?
lockable = {workspace = true, features = ["slow_assertions"]}
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "sync", "time"] }

[features]
default = []
testutils = []