[package]
name = "cryfs-cli"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "cryfs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
cryfs-blobstore = { path = "../blobstore" }
cryfs-blockstore = { path = "../blockstore" }
cryfs-cli-utils = { path = "../cli-utils" }
cryfs-cryfs = { path = "../cryfs" }
cryfs-rustfs = { path = "../rustfs", features = ["fuser"] }
cryfs-utils = { path = "../utils" }
cryfs-version = { path = "../cryfs-version" }
daemonize.workspace = true
dialoguer.workspace = true
libc.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
escargot.workspace = true
lazy_static.workspace = true
predicates.workspace = true

[features]
default = ["check_for_updates"]
check_for_updates = ["cryfs-cli-utils/check_for_updates"]
