[package]
name = "cryfs-cli"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "cryfs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
byte-unit.workspace = true
clap = { workspace = true, features = ["derive"] }
# TODO Now that we have the cryfs-runner crate, can we remove other cryfs dependencies? Can we remove tokio? Maybe go through all of our crates and check that.
cryfs-blockstore = { path = "../blockstore" }
cryfs-cli-utils = { path = "../cli-utils" }
cryfs-filesystem = { path = "../cryfs-filesystem" }
cryfs-runner = { path = "../cryfs-runner" }
cryfs-utils = { path = "../utils" }
cryfs-version = { path = "../cryfs-version" }
dialoguer.workspace = true
humantime.workspace = true
konst.workspace = true
tokio.workspace = true
log.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
escargot.workspace = true
lazy_static.workspace = true
predicates.workspace = true

[features]
default = ["check_for_updates"]
check_for_updates = ["cryfs-cli-utils/check_for_updates"]
